# yt_summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/yt_summarizer/: __init__.py  cli.py  config.py  errors.py  observability.py  workflow.py
src/yt_summarizer/api/: __init__.py  app.py
src/yt_summarizer/core/: __init__.py  service.py  types.py
src/yt_summarizer/ingestion/: __init__.py  video.py
src/yt_summarizer/llm/: __init__.py  chains.py  factories.py
src/yt_summarizer/prompts/: __init__.py  templates.py
src/yt_summarizer/retrieval/: __init__.py  faiss_store.py
src/yt_summarizer/storage/: __init__.py  local_store.py
src/yt_summarizer/transcript/: __init__.py  fetchers.py  processing.py
src/yt_summarizer/ui/: __init__.py  gradio_app.py
