[project]
name = "yt-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api==1.2.1",
    "faiss-cpu==1.8.0",
    "langchain>=0.2.11",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.2.10",
    "langchain-text-splitters>=0.2.2",
    "gradio>=4.44.1",
    "huggingface_hub>=0.23.0",
    "langchain-ollama>=1.0.1",
    "langchain-huggingface>=1.2.1",
    "sentence-transformers>=5.3.0",
]

[project.scripts]
yt-summarizer = "yt_summarizer.cli:main"
