[project]
name = "yt-summarizer"
version = "0.1.0"
description = "Production-style RAG service for YouTube transcript summarization and question answering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.8.0",
    "fastapi>=0.135.3",
    "gradio>=4.44.1",
    "langchain>=0.2.11",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.2.10",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=0.2.2",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
    "youtube-transcript-api==1.2.1",
]

[project.scripts]
yt-summarizer = "yt_summarizer.cli:main"
yt-summarizer-api = "yt_summarizer.api.app:main"
yt-summarizer-ui = "yt_summarizer.ui.gradio_app:main"

[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
